--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -168,3 +168,25 @@ footer {
 	display: flex;
 	/* display: inline-block; */
 }
+
+/* services page */
+.top-box {
+	border-bottom: 1px solid black;
+	padding: 20px 10px;
+}
+.all-info {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	margin: 15px;
+	border-bottom: 1px solid black;
+	
+}
+.info-box {
+	border: 1px solid black;
+	background-color:lightgray;
+	padding: 5px;
+	margin: 20px;
+	width: 40%;
+
+}
