--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -169,7 +169,12 @@ footer {
 	/* display: inline-block; */
 }
 
-/* services page */
+/********************************************* services page **********************************************/
+.container {
+	padding: 16px;
+}
+
+
 .top-box {
 	border-bottom: 1px solid black;
 	padding: 20px 10px;
@@ -185,11 +190,16 @@ footer {
 .info-box {
 	border: 1px solid black;
 	background-color:lightgray;
-	
 	margin: 20px 0;
 	width: 40%;
 
 }
 .bottom-section {
 	display: flex;
+}
+p {
+	margin: 20px;
+}		
+.first-para {
+	width: 100%;
 }
