--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -172,12 +172,22 @@ footer {
 /********************************************* services page **********************************************/
 .container {
 	padding: 16px;
+	box-sizing: border-box;
+}
+
+header {
+	margin-bottom: 20px;
+}
+
+nav {
+	display: flex;
+	justify-content: flex-start;
 }
 
 
 .top-box {
 	border-bottom: 1px solid black;
-	padding: 20px 10px;
+	padding: 20px 0;
 }
 .all-info {
 	display: flex;
@@ -202,4 +212,10 @@ p {
 }		
 .first-para {
 	width: 100%;
+	margin: 0;
+	padding: 20px 0;
+}
+.services-header-img {
+	width: 100%;
+	box-sizing: border-box;
 }
