--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -181,7 +181,8 @@ header {
 }
 
 h1 {
-	margin: 0;
+	font-size: 26px;
+	margin: 20px 0;
 	
 }
 
@@ -191,7 +192,7 @@ nav {
 }
 
 
-.top-box {
+.top-section {
 	border-bottom: 1px solid black;
 	padding: 20px 0;
 }
@@ -207,21 +208,29 @@ nav {
 	border: 1px solid black;
 	background-color:lightgray;
 	margin: 20px 0;
-	width: 40%;
+	width: 47.5%;
 
 }
 .bottom-section {
 	display: flex;
 }
 p {
-	margin: 20px;
+	margin: 20px; 
+	line-height: 1.4;
 }		
 .first-para {
 	width: 100%;
 	margin: 0;
-	padding: 20px 0;
+	padding: 10px 0;
 }
 .services-header-img {
 	width: 100%;
 	box-sizing: border-box;
+}
+button {
+	margin: 20px;
+	width: 125px;
+}
+h2 {
+	margin: 20px;
 }
