--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -181,8 +181,8 @@ header {
 }
 
 .logo {
-	
-	justify-content: flex-end;
+	width: 100%;
+	margin-right: 0;
 }
 
 h1 {
@@ -194,6 +194,7 @@ h1 {
 nav {
 	display: flex;
 	justify-content: space-evenly;
+	margin-bottom: 35px;
 }
 
 
@@ -231,11 +232,12 @@ p {
 .services-header-img {
 	width: 100%;
 	box-sizing: border-box;
+	margin-top: 15px;
 }
 button {
 	margin: 20px;
 	padding: 10px 24px;
-	width: 125px;
+	width: 135px;
 	border: 1px solid black;
 	border-radius: 8px;
 }
@@ -261,4 +263,8 @@ a:first-child {
 
 .services-info-img {
 	margin-top: 20px;
+}
+
+footer {
+	margin-top: 30px;
 }
